# work-space

golang/: golang.md
golang/auth-server/: .env.example  .gitignore  Makefile  README.md  go.mod  go.sum
golang/auth-server/cmd/server/: main.go
golang/auth-server/internal/config/: config.go
golang/auth-server/internal/email/: email.go
golang/auth-server/internal/handler/: auth.go  oauth.go  response.go  social.go
golang/auth-server/internal/middleware/: auth.go
golang/auth-server/internal/model/: oauth.go  token.go  user.go
golang/auth-server/internal/router/: router.go
golang/auth-server/internal/service/: auth.go  oauth.go  social.go
golang/auth-server/internal/store/: interfaces.go
golang/auth-server/pkg/jwtutil/: jwtutil.go
golang/auth-server/pkg/password/: password.go
golang/inventory/: testing-dashboard.html
golang/inventory/inventory-core/: go.mod  main.go
golang/inventory/inventory-core/handlers/: inventory_handler.go
golang/inventory/order-core/: go.mod  main.go
golang/oms/: go  go.mod
golang/oms/cmd/: main.go
golang/oms/internal/: order.go  order_handler.go  order_service.go  router.go  store.go
rust/devlogs/: .gitignore  Cargo.toml  unwanted_commits.txt
rust/devlogs/migrations/: 20260426210000_create_logs_table.sql
rust/devlogs/src/: main.rs
rust/devlogs/src/db/: mod.rs  pool.rs
rust/devlogs/src/models/: log.rs
rust/devlogs/src/routes/: home.rs  logs.rs  mod.rs
rust/devlogs/src/services/: ollama.rs
rust/devlogs/templates/: base.html  create.html  index.html  view.html
(+9 files in other folders)
